# cmpe275assignments

mini-1/socket-3code/cpp-src/basic/: CMakeLists.txt
mini-1/socket-3code/java-src/basic/report/: test_client_report_basic.txt  test_client_report_basic1.txt  test_client_report_basic_2.txt  test_client_report_basic_5.txt  test_client_report_basic_num_client.txt  test_client_report_creationQ.txt  test_client_report_creationQ_1.txt  test_client_report_creationQ_2.txt  test_client_report_creationQ_5.txt  test_client_report_fixedWorkers.txt  test_client_report_fixedWorkers_1.txt  test_client_report_fixedWorkers_5.txt  test_client_report_priorityQ.txt  (+16 more)
mini-2/airnow/cpp/: CMakeLists.txt  airnow
mini-2/airnow/cpp/src/: airnow.cpp  filemanager.cpp  filemanager.hpp  loader.cpp  loader.hpp  record.cpp  record.hpp  sharedmem.cpp  sharedmem.hpp
mini-2/airnow/output/1712598445/: 16th and Whitmore.csv  1A-Ozone.csv  22nd Street & Craycroft.csv  2912 Coffey.csv  2A-Ozone.csv  2LL Los Lunas.csv  3A-PM2.5.csv  60 Near Road.csv  7004.csv  710 Near Road.csv  77th and Dodge.csv  7E Deming Airport.csv  840MMCA82004.csv  ADEQ-DSR.csv  AIR LAB.csv  AJ Maintenance Yard.csv  ALLEN PARK.csv  ALSIP.csv  APPLETON AAL.csv  ASHBURN.csv  ATHENS.csv  AURORA HILLS.csv  Ajo.csv  Alabama-Coushatta.csv  Alamo Lake.csv  Alba.csv  Albany - Calapooia School.csv  Albany.csv  Albemarle HS.csv  Aldino.csv  Algonquin Parkway.csv  Alhambra.csv  Allentown.csv  Alliance.csv  Alpine.csv  Alton.csv  Altoona.csv  Amanda Elem.csv  Amarillo Texas A&M C320.csv  Amherst.csv  (+1354 more)
mini-2/airnow/python/: graph.py
(+19 files in other folders)
